# PyCpp

./: PyCppCli.py  PyCppGui.py  README.md
data/test_srcs_pxx/: CMakeLists.txt
data/test_srcs_pxx/itf1/: pyGw_test1.cpp  test1.cpp  test1.h  test1.py
data/test_srcs_pxx/itf2/: pyGw_test2.cpp  test2.cpp  test2.h  test2.py
utils/: __init__.py  factory.py  helpers.py
